--- a/public/gadgets/nameResolver.html
+++ b/public/gadgets/nameResolver.html
@@ -22,6 +22,13 @@
 // create HR object
 gadget.init = function(finishedLoading){
 	gadget.update = function(){};
+	
+	$('#txtInputText').keypress(function(event) {
+		if (event.which == 13) {
+			clickGo();
+		}
+	});
+	
   finishedLoading();
 }
 
