--- a/public/gadgets/astroJsFitsViewer.html
+++ b/public/gadgets/astroJsFitsViewer.html
@@ -115,7 +115,7 @@ require(config, ['fits','pngParser', '/binaryajax.js', 'canvasAnnotator', 'cs!/a
     astroJsFits = _astroJsFits;
     annotator = canvasAnnotator;
     
-    initCanvases();
+    //initCanvases();
     initHTMLControls();
     
     $('#dropbox').on("dragenter", noopHandler);
@@ -179,8 +179,7 @@ var renderFile = function(file) {
 	var reader = new FileReader();
 	reader.onload = function(event) {
 		  var contents = event.target.result;
-		  astroJsFits.initalize(contents, $('#canvasArea'), displayWidth, displayHeight);
-		  fitsCanvas = astroJsFits.getCanvas();
+		  astroJsFits.init1(contents);
 		  fitsHeader = astroJsFits.getHeader();
 		  renderSuccess();
 	};
@@ -203,9 +202,22 @@ var renderSuccess = function(){
   $('#upperControls').show();
   gadget.resize();
   imageLoaded = true;
-  
-  // Initalize the annotator
+	
+	
+	// Ensure that the aspect ratio of the fits canvas matches the aspect ratio of the image
 	var imageDimensions = {width: fitsHeader.get("NAXIS1")[1], height: fitsHeader.get("NAXIS2")[1]};
+	var rat = imageDimensions.width/imageDimensions.height;
+	var canvasWidth = $('#dropbox').width();
+	$('#dropbox').height(canvasWidth*rat);
+	
+	displayWidth = $('#display').width();
+	displayHeight = $('#display').height();
+	initCanvases();
+	astroJsFits.init2($('#display'), $('#display').width(), $('#display').height());
+
+	fitsCanvas = astroJsFits.getCanvas();
+	annotatorCanvas.setAttribute('height', $('#display').height());
+	editCanvas.setAttribute('height', $('#display').height());
 	annotator.init(annotatorCanvas, astroJsFits.pixToScreen);
   
   // Initalize the wcsjs module
@@ -247,6 +259,18 @@ var renderSuccess = function(){
 		}
 	});
 	
+	var circlePos = wcs.coordinateToPixel(241.12727,10.072308);
+	annotator.addCircleRegion({'xPos': circlePos.x, 'yPos': imageDimensions.height-circlePos.y, 'radius': 10, label: "circle"});
+	document.getElementById("annoSelect").add(new Option("circle", "0"), null);
+	
+	circlePos = wcs.coordinateToPixel(241.15274,9.9070583);
+	annotator.addCircleRegion({'xPos': circlePos.x, 'yPos': imageDimensions.height-circlePos.y, 'radius': 10, label: "circle1"});
+	document.getElementById("annoSelect").add(new Option("circle1", "0"), null);
+	
+	circlePos = wcs.coordinateToPixel(241.04905,10.102285);
+	annotator.addCircleRegion({'xPos': circlePos.x, 'yPos': imageDimensions.height-circlePos.y, 'radius': 10, label: "circle2"});
+	document.getElementById("annoSelect").add(new Option("circle2", "0"), null);
+	
   /* // Add some sample annotations
   var circlePos = fits.wcs2pix(241.1766,10.102814);
 	annotator.addCircleRegion({'xPos': circlePos.x, 'yPos': circlePos.y, 'radius': 10, label: "circle"});
@@ -279,10 +303,10 @@ var renderSuccess = function(){
 // Draw the fits image, annotations, and edit marks
 var draw = function() {
 	annotator.draw();
-	displayContext.clearRect(0, 0, displayWidth, displayHeight);
-  displayContext.drawImage(fitsCanvas, 0, 0, displayWidth, displayHeight, 0, 0, displayWidth, displayHeight);
-  displayContext.drawImage(annotatorCanvas, 0, 0, displayWidth, displayHeight, 0, 0, displayWidth, displayHeight);
-  displayContext.drawImage(editCanvas, 0, 0, displayWidth, displayHeight, 0, 0, displayWidth, displayHeight);
+	displayContext.clearRect(0, 0, displayWidth, $('#dropbox').height());
+  displayContext.drawImage(fitsCanvas, 0, 0, displayWidth, $('#dropbox').height(), 0, 0, displayWidth, $('#dropbox').height());
+  displayContext.drawImage(annotatorCanvas, 0, 0, displayWidth, $('#dropbox').height(), 0, 0, displayWidth, $('#dropbox').height());
+  displayContext.drawImage(editCanvas, 0, 0, displayWidth, $('#dropbox').height(), 0, 0, displayWidth, $('#dropbox').height());
 }
 
 // Used to prevent something from happening when an event fires
@@ -393,7 +417,7 @@ var handleMousedown = function(e) {
 
 var finishDrag = function(e) {
 	if (selectedEditType == EDIT_TYPE.ADD) {
-		editContext.clearRect(0,0,640,480);
+		editContext.clearRect(0,0,$('#dropbox').width(),$('#dropbox').height());
 		var start = astroJsFits.cursorToPix(dragStart.x, dragStart.y);
 		var end = astroJsFits.cursorToPix(e.offsetX, e.offsetY);
 		if (selectedAnnoType == ANNO_TYPE.RECT) {
@@ -408,7 +432,7 @@ var finishDrag = function(e) {
 		}
 	}
 	if (selectedEditType == EDIT_TYPE.SELECT) {
-		editContext.clearRect(0,0,640,480);
+		editContext.clearRect(0,0,$('#dropbox').width(),$('#dropbox').height());
 		var start = {x: dragStart.x, y: dragStart.y};
 		var end = {x: e.offsetX, y: e.offsetY};
 		selectAnnotations(start, end);
@@ -460,7 +484,8 @@ var handleMousemove = function(e) {
 		return;
 		
 	// Update pixel readout
-	var nativeMouse = astroJsFits.cursorToPix(e.clientX, e.clientY);
+	var nativeMouse = astroJsFits.cursorToPix(e.offsetX, e.offsetY);
+	nativeMouse.y = fitsHeader.get("NAXIS2")[1] - nativeMouse.y;
 	document.getElementById("xPix").innerHTML = parseInt(nativeMouse.x);
 	document.getElementById("yPix").innerHTML = parseInt(nativeMouse.y);
 	var wcsMouse = wcs.pixelToCoordinate([nativeMouse.x, nativeMouse.y]);
@@ -475,7 +500,9 @@ var handleMousemove = function(e) {
 
 	if (leftMouseDown) {
 		if (selectedEditType == EDIT_TYPE.ADD || selectedEditType == EDIT_TYPE.SELECT) {
-			editContext.clearRect(0,0,640,480);
+			editContext.clearRect(0,0,$('#dropbox').width(),$('#dropbox').height());
+			editContext.fillStyle = "#ffffff";
+			editContext.globalAlpha = 0.3;
 			if (selectedAnnoType == ANNO_TYPE.RECT || selectedEditType == EDIT_TYPE.SELECT)
 				editContext.fillRect(dragStart.x, dragStart.y, e.offsetX-dragStart.x, e.offsetY-dragStart.y);
 			else if (selectedAnnoType == ANNO_TYPE.CIRCLE && selectedEditType != EDIT_TYPE.SELECT) {
@@ -507,8 +534,7 @@ var imageFromUrl = function(path) {
 				byteArray[i] = response.charCodeAt(i) & 0xff;
 		}
 		//fits.renderImage(file, fitsCanvas, renderSuccess);
-		astroJsFits.initalize(byteArray.buffer, $('#canvasArea'), displayWidth, displayHeight);
-		fitsCanvas = astroJsFits.getCanvas();
+		astroJsFits.init1(byteArray.buffer);
 		fitsHeader = astroJsFits.getHeader();
 		renderSuccess();
 	}
