Missing coffee-script dependency in FITS viewer

--- a/public/gadgets/astroJsFitsViewer.html
+++ b/public/gadgets/astroJsFitsViewer.html
@@ -106,7 +106,8 @@ var initViewer = function() {
 // Set configuration options for requirejs
 var config = {
     paths: {
-        'cs': '/cs'
+        'cs': '/cs',
+        'coffee-script': '/coffee-script'
     }
 };
 require(config, ['canvasAnnotator', 'cs!/astroJS/display'], function(canvasAnnotator, _astroJsFits) {
