--- a/public/gadgets/plotView.html
+++ b/public/gadgets/plotView.html
@@ -70,6 +70,8 @@ var selectionObject;
 var loadingState = false;
 //Load gadget state
 
+var init = false;
+
 // Gadget intialization
 gadget.init = function(callback){
   gadget.onNotification('dataSetChanged', gadget.update);  
@@ -196,6 +198,11 @@ function populateSelects() {
   $('#selectColor').bind('change', function(){
     selectedColor =  $(this).find('option:selected').val();
   });    
+  
+  if(!init) {
+    init = true;
+    $('#selectDatasetName').change();
+  }
 
 };
 
