Fixing bugs with gadget states

--- a/public/gadgets/ASCIIDataLoader.html
+++ b/public/gadgets/ASCIIDataLoader.html
@@ -16,6 +16,7 @@
 <script type="text/javascript">
 
 gadget.init = function(callback){
+        gadget.update = gadget.loadState;
 	gadget.onNotification('dataSetChanged', updateDataSetList);
 	
 	$("#exportContent").hide();
@@ -30,7 +31,7 @@ gadget.saveState = function(){
 };
 
 gadget.loadState = function(state){
-
+    $('#datasetNameInput').val(state.datasetName);
 };
 
 // GLOBAL CONSTANTS
@@ -118,6 +119,7 @@ function createDataset() {
 			$("#doneButton").show();
 			$("#importButton").hide();
  	}
+        gadget.setState({'datasetName' : $('#datasetNameInput').val()});
 }
 	
 // HELPER
