--- a/public/gadgets/dataSetSelector.html
+++ b/public/gadgets/dataSetSelector.html
@@ -57,6 +57,7 @@ function addColorOptionsToList(dataSet) {
 	var dataSetId = dataSet.getId();
 	var colorList = dataSet.getAttributeValues('color');
 	for (i in colorList) {
+                //if (dataSet.indices.color[colorList[i]].length == 0) break;
 		var id = "checkbox"+dataSetId+"color"+colorList[i];
 		var colorRecordIndices = dataSet.getRecordsIndicesWithAttribute('color', colorList[i]);
 		var colorRecord = dataSet.getRecord(colorRecordIndices[0]);
