Implement add/remove gadgets

--- a/public/gadgets/densityPlot.html
+++ b/public/gadgets/densityPlot.html
@@ -57,6 +57,7 @@ var sparsePoints;
 
 // Gadget intialization
 gadget.init = function(callback){
+  gadget.update();
   gadget.onNotification('dataSetChanged', gadget.update);  
   
   $('#invertXAxisButton').click( function(){
