More merge fixes

--- a/public/gadgets/sciDBCoAdd.html
+++ b/public/gadgets/sciDBCoAdd.html
@@ -64,7 +64,7 @@
 </body>
 <script src="http://code.jquery.com/jquery-1.8.1.min.js" type="text/javascript"></script>
 <script src="/util.js" type="text/javascript"></script>
-<script type="text/javascript" src="/astrojs/wcs.js"></script>
+<script type="text/javascript" src="/wcs.js"></script>
 <script type="text/javascript">
 
 var scidbServerAPI = "http://vega.cs.washington.edu:5551/"
