--- a/public/gadgets/sciDBCoAdd.html
+++ b/public/gadgets/sciDBCoAdd.html
@@ -214,7 +214,8 @@ window.onload = function() {
                 if (result['status'] === 'OK') {
                     showStatus(ICON_URL_SUCCESS, "Query Complete.");
                     
-                    gadget.notify('loadImageURL', scidbServerAPI + "get/" + result['fits_file']);
+                    //gadget.notify('loadImageURL', scidbServerAPI + "get/" + result['fits_file']);
+		    gadget.dashboard.addGadget('astroJsFitsViewer', -1, -1, {imagePath: scidbServerAPI + "get/" + result['fits_file']});
                     
                 } else {
                     showStatus(ICON_URL_ERROR, "An errored occured while processing the query.");
